@@ -1,48 +1,30 @@
 package org.sopt.makers.internal.project.mapper;
 
-import lombok.val;
-import org.sopt.makers.internal.member.domain.Member;
-import org.sopt.makers.internal.project.domain.Project;
-import org.sopt.makers.internal.internal.dto.InternalMemberProjectResponse;
-import org.sopt.makers.internal.internal.dto.InternalProjectDetailResponse;
-import org.sopt.makers.internal.internal.dto.InternalProjectResponse;
-import org.sopt.makers.internal.project.dto.response.ProjectDetailResponse;
-import org.sopt.makers.internal.project.dto.response.ProjectLinkDao;
-import org.sopt.makers.internal.project.dto.response.ProjectMemberVo;
-import org.sopt.makers.internal.project.dto.response.ProjectResponse;
-import org.springframework.stereotype.Component;
-
 import java.util.List;
-import java.util.stream.Collectors;
+import org.sopt.makers.internal.external.platform.InternalUserDetails;
+import org.sopt.makers.internal.external.platform.MemberSimpleResonse;
+import org.sopt.makers.internal.external.platform.SoptActivity;
+import org.sopt.makers.internal.internal.dto.InternalProjectResponse;
+import org.sopt.makers.internal.member.domain.Member;
+import org.sopt.makers.internal.project.domain.MemberProjectRelation;
+import org.sopt.makers.internal.project.domain.Project;
+import org.sopt.makers.internal.project.domain.ProjectLink;
+import org.sopt.makers.internal.project.dto.dao.ProjectLinkDao;
+import org.sopt.makers.internal.project.dto.response.allProject.ProjectResponse;
+import org.sopt.makers.internal.project.dto.response.detailProject.ProjectDetailMemberResponse;
+import org.sopt.makers.internal.project.dto.response.detailProject.ProjectDetailResponse;
+import org.sopt.makers.internal.project.dto.response.detailProject.ProjectLinkResponse;
+import org.springframework.stereotype.Component;
 
 
 @Component
 public class ProjectResponseMapper {
 
-    public ProjectDetailResponse.ProjectMemberResponse toProjectDetailMemberResponse(ProjectMemberVo project) {
-        return new ProjectDetailResponse.ProjectMemberResponse(
-                project.memberId(), project.memberRole(), project.memberDesc(), project.isTeamMember(),
-                project.memberName(), project.memberGenerations(), project.memberProfileImage(), project.memberHasProfile()
-        );
+    public ProjectLinkResponse toProjectDetailLinkResponse (ProjectLink project) {
+        return new ProjectLinkResponse(project.getId(), project.getTitle(), project.getUrl());
     }
 
-    public ProjectResponse.ProjectMemberResponse toProjectMemberResponse (ProjectMemberVo project) {
-        return new ProjectResponse.ProjectMemberResponse(
-                project.memberId(), project.memberName(), project.memberProfileImage()
-        );
-    }
-
-    public ProjectResponse.ProjectLinkResponse toProjectLinkResponse (ProjectLinkDao project) {
-        return new ProjectResponse.ProjectLinkResponse(project.linkId(), project.linkTitle(), project.linkUrl());
-    }
-
-    public ProjectDetailResponse.ProjectLinkResponse toProjectDetailLinkResponse (ProjectLinkDao project) {
-        return new ProjectDetailResponse.ProjectLinkResponse(project.linkId(), project.linkTitle(), project.linkUrl());
-    }
-    public ProjectResponse toProjectResponse (Project project, List<ProjectMemberVo> projectMembers, List<ProjectLinkDao> projectLinks) {
-        val linkResponses = projectLinks.stream().map(this::toProjectLinkResponse).collect(Collectors.toList());
-        val memberResponses = projectMembers.stream().map(this::toProjectMemberResponse).collect(Collectors.toList());
-
+    public ProjectResponse toProjectResponse(Project project, List<MemberSimpleResonse> projectMemberResponses) {
         return new ProjectResponse(
                 project.getId(),
                 project.getName(),
@@ -55,69 +37,69 @@ public class ProjectResponseMapper {
                 truncateString(project.getDetail()),
                 project.getLogoImage(),
                 project.getThumbnailImage(),
-                memberResponses,
-                linkResponses
+                projectMemberResponses
         );
     }
 
-    public ProjectDetailResponse toProjectDetailResponse (List<ProjectMemberVo> projectMembers, List<ProjectLinkDao> projectLinks) {
-        val projectInfo = projectMembers.get(0);
-        val memberResponses = projectMembers.stream().map(this::toProjectDetailMemberResponse).collect(Collectors.toList());
-        val linkResponses = projectLinks.stream().map(this::toProjectDetailLinkResponse).collect(Collectors.toList());
+    public List<ProjectDetailMemberResponse> toListProjectMemberResponse(List<MemberProjectRelation> projectMembers,
+                                                                                               List<InternalUserDetails> projectMembersDetails,
+                                                                                               List<Member> hasProfileList) {
+        return projectMembers.stream()
+                .map(member -> {
+                    InternalUserDetails details = projectMembersDetails.stream()
+                            .filter(d -> d.userId().equals(member.getUserId()))
+                            .findFirst().get();
+
+                    Boolean memberHasProfile = hasProfileList.stream()
+                            .filter(m -> m.getId().equals(member.getUserId()))
+                            .findFirst().get().getHasProfile();
+
+                    return new ProjectDetailMemberResponse(
+                            member.getId(),
+                            member.getRole(),
+                            member.getDescription(),
+                            member.getIsTeamMember(),
+                            details.name(),
+                            details.soptActivities().stream().map(SoptActivity::generation).toList(),
+                            details.profileImage(),
+                            memberHasProfile
+                    );
+                })
+                .toList();
+    }
+
+    public ProjectDetailResponse toProjectDetailResponse(Project project,
+                                                         List<ProjectDetailMemberResponse> memberResponses,
+                                                         List<ProjectLink> projectLinks) {
+        List<ProjectLinkResponse> linkResponses = projectLinks.stream()
+                .map(this::toProjectDetailLinkResponse)
+                .toList();
 
         return new ProjectDetailResponse(
-                projectInfo.id(),
-                projectInfo.name(),
-                projectInfo.writerId(),
-                projectInfo.generation(),
-                projectInfo.category(),
-                projectInfo.startAt(),
-                projectInfo.endAt(),
-                projectInfo.serviceType(),
-                projectInfo.isAvailable(),
-                projectInfo.isFounding(),
-                projectInfo.summary(),
-                projectInfo.detail(),
-                projectInfo.logoImage(),
-                projectInfo.thumbnailImage(),
-                projectInfo.images(),
-                projectInfo.createdAt(),
-                projectInfo.updatedAt(),
-                memberResponses,
-                linkResponses
-        );
-    }
-
-    public InternalProjectDetailResponse toInternalProjectDetailResponse (List<ProjectMemberVo> projectMembers, List<ProjectLinkDao> projectLinks) {
-        val projectInfo = projectMembers.get(0);
-        val memberResponses = projectMembers.stream().map(this::toInternalProjectMemberResponse).collect(Collectors.toList());
-        val linkResponses = projectLinks.stream().map(this::toInternalProjectDetailLinkResponse).collect(Collectors.toList());
-
-        return new InternalProjectDetailResponse(
-                projectInfo.id(),
-                projectInfo.name(),
-                projectInfo.writerId(),
-                projectInfo.generation(),
-                projectInfo.category(),
-                projectInfo.startAt(),
-                projectInfo.endAt(),
-                projectInfo.serviceType(),
-                projectInfo.isAvailable(),
-                projectInfo.isFounding(),
-                projectInfo.summary(),
-                projectInfo.detail(),
-                projectInfo.logoImage(),
-                projectInfo.thumbnailImage(),
-                projectInfo.images(),
-                projectInfo.createdAt(),
-                projectInfo.updatedAt(),
+                project.getId(),
+                project.getName(),
+                project.getWriterId(),
+                project.getGeneration(),
+                project.getCategory(),
+                project.getStartAt(),
+                project.getEndAt(),
+                project.getServiceType(),
+                project.getIsAvailable(),
+                project.getIsFounding(),
+                project.getSummary(),
+                project.getDetail(),
+                project.getLogoImage(),
+                project.getThumbnailImage(),
+                project.getImages(),
+                project.getCreatedAt(),
+                project.getUpdatedAt(),
                 memberResponses,
                 linkResponses
         );
     }
 
     public InternalProjectResponse toInternalProjectResponse (Project project, List<ProjectLinkDao> projectLinks) {
-        val linkResponses = projectLinks.stream().map(this::toIntenralProjectLinkResponse).collect(Collectors.toList());
+        List<ProjectLinkResponse> linkResponses = projectLinks.stream().map(this::toIntenralProjectLinkResponse).toList();
 
         return new InternalProjectResponse(
                 project.getId(),
@@ -135,24 +117,10 @@ public class ProjectResponseMapper {
         );
     }
 
-    public InternalProjectDetailResponse.ProjectMemberResponse toInternalProjectMemberResponse (ProjectMemberVo project) {
-        return new InternalProjectDetailResponse.ProjectMemberResponse(
-                project.memberId(), project.memberRole(), project.memberDesc(), project.isTeamMember(),
-                project.memberName(), project.memberGenerations(), project.memberProfileImage(), project.memberHasProfile()
-        );
+    public ProjectLinkResponse toIntenralProjectLinkResponse (ProjectLinkDao project) {
+        return new ProjectLinkResponse(project.linkId(), project.linkTitle(), project.linkUrl());
     }
 
-    public InternalProjectResponse.ProjectLinkResponse toIntenralProjectLinkResponse (ProjectLinkDao project) {
-        return new InternalProjectResponse.ProjectLinkResponse(project.linkId(), project.linkTitle(), project.linkUrl());
-    }
-
-    public InternalProjectDetailResponse.ProjectLinkResponse toInternalProjectDetailLinkResponse (ProjectLinkDao project) {
-        return new InternalProjectDetailResponse.ProjectLinkResponse(project.linkId(), project.linkTitle(), project.linkUrl());
-    }
-
-    public InternalMemberProjectResponse toInternalMemberProjectResponse (Member member, int count) {
-        return new InternalMemberProjectResponse(member.getId(), member.getProfileImage(), count);
-    }
 
     private String truncateString(String str) {
         if (str != null && str.length() > 20) {
